<resources>
    <string name="app_name">EASY TAKE</string>
    <string name="activity_login">Login Activity</string>
    <string name="join_now">JOIN NOW</string>
    <string name="easy_take">EASY TAKE</string>
    <string name="login">LOGIN</string>
    <string name="hotel_login">HOTEL LOGIN</string>
    <string name="mo_no">MOBILE NUMBER</string>
    <string name="image">APP LOGO</string>
    <string name="pass">PASSWORD</string>
    <string name="welcome">WELCOME!!</string>
    <string name="next">NEXT</string>
    <string name="login_failed">LOGIN FAILED$</string>
    <string name="invalid_mono">INVALID MO.NO.$$</string>
    <string name="invalid_password">INVALID PASSWORD$$</string>
    <string name="name">ENTER YOUR NAME</string>
    <string name="creat_ac">VERIFY and CREAT A/C</string>
    <string name="remember_me">REMEMBER ME!</string>
    <string name="admin">ADMIN</string>
    <string name="not_admin">NOT ADMIN</string>
    <string name="forgot_pass">FORGOT PASS.</string>
    <string name="login_admin">Admin Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_name">USER NAME</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_info">APP INFO</string>
    <string name="menu_cart">CART</string>
    <string name="Rs">\u20B9</string>
    <string name="Table_no_view">Table No.</string>
    <string name="time">DATE</string>
    <string name="star">\u2605</string>
    <string name="table">Table No</string>
    <string name="menu_order">ORDERS</string>
    <string name="menu_history">HISTORY</string>
    <string name="menu_category">CATEGORY</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_tools">SETTINGS</string>
    <string name="home">HOME</string>
    <string name="admin_kitchen">KITCHEN</string>
    <string name="admin_Billing">BILLING</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="action_settings">Settings</string>
    <string name="close">CLOSE</string>
    <string name="done">DONE</string>
    <string name="place_order">PLACE YOUR ORDER…</string>
    <string name="touch_to">Click Pricce to EDIT Price…</string>
    <string name="oo">00</string>
    <string name="enter_no">No</string>
    <string name="order">ORDERS</string>
    <string name="item_count">ITEM COUNT</string>
    <string name="item_price">Item Price(Rs):</string>
    <string name="add">ADD</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="add_price">Add Per Item Price</string>
    <string name="item_name">Item Name</string>
    <string name="common_menu">ADD ITEM IN YOUR MENU.</string>
    <string name="add_items">Add Menu Items</string>
    <string name="add_own_items">Add Own Menu Items</string>
    <string name="update">UPDATE</string>
    <string name="change_profile">Change Profile</string>
    <string name="menu_home">HOME</string>
    <string name="menu">MENU</string>
    <string name="hotel_name">HOTEL NAME</string>
    <string name="village">VILLAGE</string>
    <string name="choose_table">Choose Table NO.</string>
    <string name="table_no">Enter your table No.</string>
    <string name="admin_table_no">How Much Tables In hotel</string>
    <string name="owner_name">OWNER NAME as on upi…</string>
    <string name="powered_by">Powered By…</string>
    <string name="aim">A.I.M</string>
    <string name="pwrdby">APP INTELLIGENCE MAKER</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="admin_upi_payment">UPI For PAYMENTS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="amount">Total Amount :</string>
    <string name="upi">UPI Id</string>
    <string name="confirm">CONFIRM</string>
    <string name="note">Note</string>
    <string name="hotel_payment">Its Hotel Payment</string>
    <string name="pay">PAY</string>
    <string name="total">Total =</string>
    <string name="qunt">* Count:</string>
    <string name="online">ONLINE</string>
    <string name="offline">OFFLINE</string>
    <string name="price">Price:</string>
    <string name="send_upi">Send By UPI</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="generate">Generate QR Code of Above Info.</string>
    <string name="qr_info1">\u25CF Check your Mobile No.with No. of tables in your hotel</string>
    <string name="qr_info2">\u25CF To generate QR Codes click on Generate Button</string>
    <string name="qr_info3">\u25CF After Done message,Check Easy Take folder</string>
    <string name="qr_info4">\u25CF QR code files have a name as 1234567890@1</string>
    <string name="qr_info5">\u25CF 1234567890 is your Mo.No.and 1 is table No.</string>
    <string name="qr_info6">\u25CF Print all QR codes carefully and paste on respective table</string>
    <string name="find_hotel">FIND HOTEL BY LOCATION</string>
</resources>
