<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerateQRcodeActivity"
    android:orientation="vertical"
    android:background="@drawable/food3">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/qr_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:id="@+id/mobile_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:text="@string/mo_no"/>
    <TextView
        android:id="@+id/table_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:textColor="@android:color/black"
        android:text="@string/table"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/generate_btn"
        android:layout_marginTop="5dp"
        android:background="#F7A1A9DB"
        android:textColor="@android:color/black"
        android:text="@string/generate"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="10dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="#030303" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:text="@string/qr_info1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:text="@string/qr_info2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:text="@string/qr_info3"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:text="@string/qr_info4"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:text="@string/qr_info5"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="5dp"
            android:text="@string/qr_info6"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="#030303" />
    </LinearLayout>
</LinearLayout>