<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="#FF0000FF" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/total_bill_2_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/total_amount_to_pay_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/oo"
            android:textSize="25sp"
            android:background="#FFFF00"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:background="#189FF1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_mode"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_marginTop="10dp"/>

    <View
        android:layout_width="200dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:background="#189FF1" />


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center">
        <RadioButton android:id="@+id/radio_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/online"
           />
        <RadioButton android:id="@+id/radio_offline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/offline"
            />
    </RadioGroup>
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:background="#189FF1" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/cancel_btn_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button_backgrnd"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
        <Button
            android:id="@+id/done_btn_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:background="@drawable/blue_button_backgrnd"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginLeft="70dp" />

    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:background="#FF0000FF"
        android:layout_marginBottom="5dp"/>


</LinearLayout>