<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food4"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_applogo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image"
            android:src="@drawable/logoa12"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aim"
            android:textAlignment="center"
            android:textColor="#B2FF59"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwrdby"
            android:textAlignment="center"
            android:textColor="#B2FF59"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_take"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:id="@+id/main_join_now_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orange_button_backgrnd"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/join_now"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/join_person_icon"
                android:textStyle="bold"
                android:drawableLeft="@drawable/join_person_icon" />

            <Button
                android:id="@+id/main_login_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orange_button_backgrnd"
                android:importantForAutofill="no"
                android:drawableStart="@drawable/login_icon"
                android:layout_gravity="center"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:text="@string/login"
                android:textSize="19sp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/login_icon" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>