<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp">
    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:layout_marginTop="5dp"
        android:background="#FF0000FF" />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_price"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/admin_add_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:hint="@string/item_price"
        android:textSize="25sp"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/black"/>
    <View
        android:layout_width="200dp"
        android:layout_height="3dp"
        android:layout_gravity="center"
        android:background="#D50000" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp">

        <Button
            android:id="@+id/cancel_btn_add_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/add_btn_add_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/add"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginLeft="40dp" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#FF0000FF" />



</LinearLayout>