<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <TextView
        android:id="@+id/order_title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="23sp"
        android:layout_marginTop="20dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="#FF0000FF" />
    <TextView
        android:id="@+id/selected_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:background="@color/text_backgrnd"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_marginTop="5dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:background="#189FF1" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/aa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginTop="13dp" />

        <TextView
            android:id="@+id/total_price_of_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/aa"
            android:background="@color/dialog"
            android:text="@string/oo"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/aa" />

    </RelativeLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:background="#189FF1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_count"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_marginTop="10dp"/>

    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
        android:id="@+id/select_item_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:initialNumber="1"
        app:finalNumber="20"
        app:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:backGroundColor="@color/colorAccent"
        app:textColor="@android:color/black"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="15dp"
        android:background="#189FF1" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        >

        <Button
            android:id="@+id/cancel_btn_place_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button_backgrnd"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/done_btn_place_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:background="@drawable/blue_button_backgrnd"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginLeft="70dp" />

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginTop="15dp"
        android:background="#FF0000FF"
        android:layout_marginBottom="30dp"/>



</LinearLayout>